<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.13</version>
        <relativePath/>
    </parent>

    <groupId>io.yak.ops</groupId>
    <artifactId>yak-ops</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Yak Ops</name>
    <description>Yak Ops unified parent and reactor build</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <yak-framework.version>1.0.0-SNAPSHOT</yak-framework.version>
        <minio.version>8.6.0</minio.version>
        <hadoop.version>3.5.0</hadoop.version>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
    </properties>

    <modules>
        <module>yak-ops-bom</module>
        <module>yak-ops-common</module>
        <module>yak-ops-spi</module>
        <module>yak-ops-core</module>
        <module>yak-ops-business</module>
        <module>yak-ops-plugins/yak-ops-plugin-datasource</module>
        <module>yak-ops-plugins/yak-ops-plugin-storage</module>
        <module>yak-ops-plugins/yak-ops-plugin-task</module>
        <module>yak-ops-plugins/yak-ops-plugin-alert</module>
        <module>yak-ops-boot</module>
        <module>yak-ops-ui</module>
        <module>yak-ops-dist</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-framework-parent</artifactId>
                <version>${yak-framework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-common</artifactId>
                <version>${yak-framework.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-security-spring-boot-starter</artifactId>
                <version>${yak-framework.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-schedule-spring-boot-starter</artifactId>
                <version>${yak-framework.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-workflow-engine</artifactId>
                <version>${yak-framework.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.framework</groupId>
                <artifactId>yak-file</artifactId>
                <version>${yak-framework.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-datasource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-dataset</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-data-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-task-catalog</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-job</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-data-development</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-resource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-sync-offline</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-quality</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-business-alert</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-datasource-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-datasource-jdbc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-datasource-doris</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-datasource-all</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-storage-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-storage-local</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-storage-minio</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-storage-hdfs</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-storage-all</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-task-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-task-sql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-task-python</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-task-all</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-alert-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-alert-dingtalk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-plugin-alert-all</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
